Calls to internal service with Retrofit and Hmac Interceptor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PractoProxy
 
 # Server Configuration
-server.port=8080
+server.port=8092
 server.servlet.context-path=/proxy
 
 
@@ -13,3 +13,6 @@ practo.security.keys.consult.secret = a-secret-value
 practo.security.keys.consult.nonce-compliance = REQUIRED
 practo.security.keys.fabric.secret = a-secret-value
 practo.security.keys.fabric.nonce-compliance = REQUIRED
+
+logging.level.org.springframework.web=DEBUG
+logging.level.your.package=DEBUG
