--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
             <groupId>com.practo.commons</groupId>
             <artifactId>commons-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 		<dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
