changes in http client and retrofit config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,13 @@ practo.security.nonce-ttl = 10s
 
 practo.security.keys.titan.client-name = reach
 practo.security.hmac-enabled = true
-practo.security.keys.titan.secret=9YqPKsQTjNPeKg6tmZ5BVgP7
+practo.security.keys.titan.secret=a-secret-value
 practo.security.keys.titan.nonce-enabled=false
 practo.security.keys.titan.algo=HmacSHA1
 
-practo.security.keys.consult.secret = a-secret-valuekk
+practo.security.keys.consult.secret = a-secret-value
 practo.security.keys.consult.nonce-compliance = REQUIRED
-practo.security.keys.fabric.secret = a-secret-valuepp
+practo.security.keys.fabric.secret = a-secret-value
 practo.security.keys.fabric.nonce-compliance = REQUIRED
 
 logging.level.org.springframework.web=DEBUG
