--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,14 @@ practo.system.props.staging.name = proxtstg
 
 server.servlet.logging.request-details=true
 spring.mvc.log-request-details=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/proxyaccounts?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=krjp1234
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# App Properties
+proxy.app.jwtSecret=jwt-secret
+proxy.app.jwtExpirationMs=86400000
