--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,30 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+		<dependency>
+		<groupId>com.mysql</groupId>
+		<artifactId>mysql-connector-j</artifactId>
+		<scope>runtime</scope>
+		<version>8.3.0</version>
+		</dependency>
+		<!-- Jakarta Persistence -->
+		<!-- <dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+		</dependency> -->
+
+		<!-- Jakarta Bean Validation -->
+		<!-- <dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency> -->
+
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
 	</dependencies>
 
 	<build>
